# mnist-viewer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  class_main_window-members.html  class_main_window.html  class_network-members.html  class_network.html  class_test_main_window-members.html  class_test_main_window.html  class_test_main_window.js  class_test_network-members.html  class_test_network.html  class_training_progress-members.html  class_training_progress.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main.cpp  main_8cpp.html  main_8cpp_source.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+28 more)
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_main_window__inherit__graph.map  class_main_window_a2654e7f17bc5939e6faf2b5b0f1a7e14_cgraph.map  class_main_window_a2654e7f17bc5939e6faf2b5b0f1a7e14_cgraph.md5  class_main_window_a2654e7f17bc5939e6faf2b5b0f1a7e14_icgraph.map  class_main_window_a295503fa2bed64e248b747554e0ab1de_icgraph.map  class_main_window_a295503fa2bed64e248b747554e0ab1de_icgraph.md5  class_main_window_a309afcea5fb46e7d9147f8d1d34bd4ae_icgraph.md5  class_main_window_a3567e6730c66b0ea07dce173030e14ea_icgraph.md5  class_main_window_a996c5a2b6f77944776856f08ec30858d_cgraph.map  class_network.html  class_network.js  class_network__inherit__graph.map  class_network_a918e8764ff7d1ec1075b4d7c03cbc637_icgraph.map  class_network_a918e8764ff7d1ec1075b4d7c03cbc637_icgraph.md5  class_network_a92f5ba4b117136d3c821b94bb556f7cc_icgraph.map  class_network_a92f5ba4b117136d3c821b94bb556f7cc_icgraph.md5  class_network_ab8977e4e88c259ebf57040c0f16a7b36_icgraph.md5  class_network_adeeef709062e797fcf1a0e6d8cd18810_cgraph.map  class_network_adeeef709062e797fcf1a0e6d8cd18810_icgraph.md5  class_network_ae438d2367e76e8367ea63cf40a654006_cgraph.map  class_network_ae438d2367e76e8367ea63cf40a654006_cgraph.md5  class_network_ae713382eb8476d14c48028e1582365ff_icgraph.md5  class_test_main_window.html  class_test_main_window__coll__graph.map  class_test_main_window__inherit__graph.map  class_test_main_window_a6347104c49e53badd27bfab2533c13e0_cgraph.map  class_test_main_window_a6347104c49e53badd27bfab2533c13e0_cgraph.md5  class_test_main_window_abfd4591c6cf9af812523eeb524b0cfba_cgraph.map  class_test_main_window_ad3518561dfb44ec2f66ec701a0056bf8_cgraph.map  class_test_main_window_ad3518561dfb44ec2f66ec701a0056bf8_cgraph.md5  class_test_network__coll__graph.md5  class_test_network__inherit__graph.map  class_test_network__inherit__graph.md5  class_training_progress.html  class_training_progress.js  (+47 more)
docs/: index.html
docs/html/: _c_make_lists_8txt.html  class_main_window.js  class_main_window__coll__graph.md5  class_main_window_a2022e2fd459723779c6143a575c20b46_icgraph.map  class_main_window_a2022e2fd459723779c6143a575c20b46_icgraph.md5  class_main_window_a212799622ae1e66134b994ae50e0c3e3_icgraph.map  class_main_window_a212799622ae1e66134b994ae50e0c3e3_icgraph.md5  class_main_window_a2654e7f17bc5939e6faf2b5b0f1a7e14_icgraph.md5  class_main_window_a309afcea5fb46e7d9147f8d1d34bd4ae_icgraph.map  class_main_window_a3567e6730c66b0ea07dce173030e14ea_icgraph.map  class_main_window_a4520f9dc59706fc1d97cb9e98574c833_icgraph.map  class_main_window_a4520f9dc59706fc1d97cb9e98574c833_icgraph.md5  class_main_window_a996c5a2b6f77944776856f08ec30858d_cgraph.md5  class_network-members.html  class_network__coll__graph.md5  class_test_main_window-members.html  (+59 more)
include/: network.h
search/: all_1.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  pages_0.js  pages_1.js  related_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: mainwindow.cpp  network.cpp
test/: test_mainwindow.cpp  test_network.cpp
ui/: mainwindow.ui
(+144 files in other folders)
